3.6.0-beta3 - ???

3.6.0-beta2 - 7 September 2021

* 10392: HTTP requests for server status should follow redirects
* 10390: NPE in GameModule.getProperty() after deleting the Map from the
    owning Map widget
* 10387: 'Centre on Opponents Moves' functionality should ignore movement by
    Invisible units
* 10386: Audit Trail reporting is not reporting trait or piece information for
    Return to Deck trait when invalid Deck specified
* 10383: Update all site URLs for new site and HTTPS
* 10381: Replaying a log step can cause Deck to become corrupted
* 10375: NPE in EnumeratedPropertyPrompt.getNewValue()
* 10371: Reset the Zone Editor title to match the Zone being edited
* 10359: ClassCastException: DeckGlobalCommand cannot be cast to Auditable
* 10357: Return To Deck Deck name can be lost when pre 3.6 module is edited
    using 3.6
* 10351: Checkbox preference default value is ignored
* 10341: Symbolic Dice Button tooltip is overwritten by description text
* 10337: Bring Reference Manual up to date
* 10226: Force Game Piece Image names to be valid file names ending in .png
* 10095: Definition of Player Sides - Retire/Switch Button image not showing in
    editor

3.6.0-beta1 - 21 August 2021

* 10326: Add option to disable OpenGL FBOs on Macs
* 10301: Double max heap and retry when image tiler runs out of memory
* 10294: Can Rotate traits no longer lose any pre-defined starting rotation
    when editing a Piece Slot
* 10286: Add removal/deprecation checker and remove anything deprecated a year
    ago
* 10277: When editing an IrregularGrid, start the map view somewhere near the
    grid or its parent Zone
* 10276: Expose property if we're currently drawing Counter Detail Viewer
* 10273: Mat Cargo can be set to detect mats way from their exact center
* 10272: Don't auto-name new regions a long string
* 10259: 64-bit ARM builds for Windows and Macs; switched bundled Java to Zulu
* 10248: Invisible trait - Option to disable auto-report of moves