@@ -1,5 +1,8 @@
 3.6.0-beta3 - ???
 
+* 10399: ThrowableUtils.throwAncestor() throws wrong object; throwMe() uses
+    wrong constructor
+
 3.6.0-beta2 - 7 September 2021
 
 * 10392: HTTP requests for server status should follow redirects
